# E-Commerce-Chatbot-recommendation

./: .env.example  .gitignore  Dockerfile  LICENSE  Readme.md  app.py  chat.py  jenkinsfile  main.py  pyproject.toml  requirements.txt
api/: main.py
api/ECRecom/routes/: retreiver_rel_docs.py  trainer_routes.py
api/LLMResponse/routes/: llm_query_routes.py  summarizer_routes.py
api/constants/: __init__.py
api/templates/: index.html
data/: db.py  jsonFileDataExtreactor.py  untitled.ipynb
logger/: __init__.py
notebook/: experiment.ipynb  loadingjson.ipynb
notebook/vector_data/faiss/: index.faiss
src/ECRecom/components/: data_ingestion.py  data_transformation.py  similarity_fetch.py
src/ECRecom/constants/: __init__.py
src/ECRecom/data_access/: connect_data.py  load_vector_db.py
src/ECRecom/entity/: artifact_entity.py  config_entity.py
src/ECRecom/pipelines/: prediction_pipeline.py  training_pipeline.py
src/ECRecom/tests/: run_prediction_pipeline.py  run_training_pipeline.py
src/LLMResponse/components/: image_component_models.py  summerizer_.py  uploaded_resourse_analyser.py
src/LLMResponse/constants/: __init__.py
src/LLMResponse/entity/: __init__.py
src/LLMResponse/graphs/: chat_graph.py  orchastrator_graph.py
src/LLMResponse/llm/: image_summerizer.py  llm_loader.py
src/LLMResponse/memmory/: __init__.py
src/LLMResponse/models/: image_component_models.py  orchastrator_state.py  resource_analyser_model.py  state_model.py
src/LLMResponse/nodes/: chat_llm_node.py  image_summerizer_node.py  orchastrator_node.py  resource_analyser_node.py  (+2 more)
(+6 files in other folders)
